2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: The managed xaml loader doesn't need
	  to call SetParent on DOs anymore. This should be handled
	  fine by the engine.

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Spaces aren't a terminating
	  character for segments in a binding expression, only '}' and
	  ',' appear to indicate the end of a segment. Fixes the new
	  moon-unit testcase and appears to regress nothing.

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: When we enter or leave an escaped
	  block, we need to include the escaped characters in our
	  output string.

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: Comment this back out to fix the
	  build. I'll add a test for this change next...

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: Refactor ManagedXamlLoader to look for
	  the getter method instead of the setter method when trying
	  to figure out if a DP is an attached DP or not as setters
	  are not always required. When a DP type is typeof (IList),
	  we use the IList setting code before attempting to use the
	  static setter method. Fixes the bug where setting an
	  attached property with no static setter in xaml would
	  silently fail.

2010-03-10  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs: Allow mustached statements in
	expressions such as: \{foo bar\}.  A space is allowed
	after the trailing closestache.

2010-03-09  David Reveman  <davidr@novell.com>

	* Value.cs: Handle the transition between libmoon DO-based
	matrix (UnmanagedMatrix3D) and the managed, struct-based,
	Matrix3D type.

	* Types.cs: Force System.Windows.Media.Media3D.Matrix to be
	registered as an UNMANAGEDMATRIX3D.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs:
	* Events.cs: Regenerated.

2010-03-04  Chris Toshok  <toshok@ximian.com>
